test/core/errors/indexed_offsets_error/zs/constraint_expression_error.zs
package constraint_expression_error;

struct ContraintExpressionError
{
    int32 field[10] : field < @index;
};
